cluster-setup/configs/pihole/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-web
  namespace: pihole
  labels:
    app: pihole
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8081
      targetPort: 8081
      protocol: TCP
  selector:
    app: pihole
