cluster-setup/configs/pihole/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pihole-ingress
  namespace: pihole
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`hahafhaha-pihole.com`)
      services:
        - name: pihole-web
          port: 8081
